increase memory sizes, both javac and test runtime